# flask-jwt

./: pyproject.toml
src/: main.py
src/application/use_cases/: auth_mixin.py
src/application/use_cases/auth/: urls.py
src/application/use_cases/auth/views/: login.py
src/application/use_cases/blog/: urls.py
src/application/use_cases/blog/views/: post.py
src/domain/entities/account/: account.py  account_share.py
src/domain/entities/post/: post.py  post_data.py  post_id.py
src/domain/enums/: permission.py
src/domain/service/authentication/: authentication.py  interface.py
src/domain/service/authentication/exceptions/: invalid_authentication_error.py
src/domain/service/authorization/: authorization.py
src/domain/service/blog/: interface.py  service.py
src/domain/value_objects/: authentication.py
test/: conftest.py
test/application/use_cases/auth/views/: test_login.py
test/application/use_cases/blog/views/: test_post.py
